# brotein

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md
.claude/: settings.json
.claude/hooks/: lint-format.sh
backend/: CLAUDE.md  pyproject.toml
backend/app/: database.py  db_models.py  main.py  models.py  openai_service.py
backend/app/routes/: daily.py  goals.py  meals.py  users.py  weekly.py
frontend/: CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml
frontend/mockups/: daily-redesign.html
frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
frontend/src/components/: CalorieRingChart.tsx  DailySummaryCard.tsx  GoalForm.tsx  Header.tsx  MealEntryForm.tsx  MealList.tsx  MealMemoryModal.tsx  MealRowEditable.tsx  UserSelector.tsx  WeeklyCharts.tsx
frontend/src/context/: UserContext.tsx
frontend/src/pages/: AccountPage.tsx  DailyPage.tsx  WeeklyPage.tsx
