[tool.poetry]
name = "brotein-backend"
version = "0.1.0"
description = "FastAPI backend for brotein"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = { version = "^0.34", extras = ["standard"] }
python-multipart = "^0.0.22"
sqlalchemy = "^2.0"
openai = "^1.0"
python-dotenv = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
