[tool.poetry]
name = "brotein-backend"
version = "0.1.0"
description = "FastAPI backend for brotein"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = { version = "^0.34", extras = ["standard"] }
python-multipart = "^0.0.22"
sqlalchemy = "^2.0"
openai = "^1.0"
python-dotenv = "^1.0"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]
# E/W = pycodestyle errors/warnings  (E501 ignored — ruff format handles line length)
# F   = pyflakes
# I   = isort (import sorting)
# UP  = pyupgrade (modern Python syntax)

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.1,<0.16.0)"
]
